--- a/css/styles.css
+++ b/css/styles.css
@@ -9,14 +9,30 @@
   --label-color: #000000;
   --ftr-contacts-color: rgba(255, 255, 255, 0.6);
 }
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 body {
   background-color: var(--white-next-color);
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
   color: var(--context-color);
+  margin: 0;
 }
 /* Щапка сайта */
+.top {
+  display: inline-block;
+  width: 1200px;
+  height: 80px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 /* Логотип */
 .logo {
   text-decoration: none;
@@ -29,6 +45,10 @@ body {
 }
 .logo > span {
   color: var(--logo-color);
+}
+.list {
+  margin: 0;
+  padding: 0;
 }
 .list a {
   list-style: none;
@@ -60,18 +80,27 @@ body {
 .contacts a:focus {
   color: var(--logo-color);
 }
+.contacts {
+  margin: 0;
+  padding: 0;
+}
 .contacts li {
   list-style-type: none;
 }
 /* Секция герой */
 .hero {
   background: var(--hero-color);
+  width: 1600px;
+  height: 600px;
+  text-align: center;
+  margin-bottom: 94px;
 }
 .hero h1 {
+  margin-top: 0;
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-next-color);
@@ -89,14 +118,22 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: var(--white-next-color);
 }
 /* Секция достоинства */
+.dig-main {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 94px;
+}
 .dignity > h2 {
-  visibility: hidden;
+  display: none;
+}
+.dignity ul {
+  margin: 0;
+  padding: 0;
 }
 .dignity li {
   list-style-type: none;
@@ -106,11 +143,25 @@ body {
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--title-text-color);
+  margin-bottom: 10px;
+  margin-top: 0;
 }
 .dignity-text {
   line-height: 1.71;
+  margin: 0;
+  padding: 0;
 }
 /* Секция Чем мы занимаемся */
+.about-work {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 94px;
+}
+.about-work ul {
+  margin: 0;
+  padding: 0;
+}
 .about-work li {
   list-style-type: none;
 }
@@ -120,10 +171,19 @@ body {
   line-height: 1.16;
   text-align: center;
   color: var(--title-text-color);
+  margin: 0 0 50px 0;
 }
 /* Секция Наша команда */
 .team {
   background-color: var(--team-bg-color);
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 94px;
+}
+.team ul {
+  margin: 0;
+  padding: 0;
 }
 .team li {
   list-style-type: none;
@@ -133,14 +193,40 @@ body {
   font-size: 16px;
   line-height: 1.18;
   color: var(--title-text-color);
+  margin-top: 30px;
 }
 .team-text {
+  display: inline-block;
   font-size: 16px;
   line-height: 1.18;
+  margin-top: 0;
+  margin-bottom: 30px;
+  padding: 0;
+}
+.team-text-last {
+  /* kostili!!!!!!!!!!!!!!!! */
+  font-size: 16px;
+  line-height: 1.18;
+  padding: 0;
+  margin-bottom: 0;
+  margin-top: 0;
+  /* kostili!!!!!!!!!!!!!!!! */
 }
 /* Подвал */
 .ftr {
+  display: inline-block;
   background-color: var(--hero-color);
+  width: 1600px;
+  height: 252px;
+}
+.ftr-cont {
+  width: 1200px;
+  padding-left: 215px;
+  padding-right: 15px;
+}
+.ftr-cont ul {
+  margin: 0;
+  padding: 0;
 }
 .ftr-list a:hover,
 .ftr-list a:focus {
@@ -156,16 +242,20 @@ body {
   text-decoration: none;
 }
 .ftr .logo {
+  display: inline-block;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   color: var(--white-next-color);
+  padding-top: 60px;
+  margin-bottom: 20px;
 }
 .ftr-street,
 .ftr-contacts {
   font-style: normal;
   line-height: 1.71;
   color: var(--white-next-color);
+  margin-bottom: 9px;
 }
 .ftr-contacts {
   color: var(--ftr-contacts-color);
@@ -173,11 +263,20 @@ body {
 /* Portfolio html */
 
 .port-our-work > h1 {
-  visibility: hidden;
+  display: none;
+}
+.port-our-work {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 94px;
 }
 /* Кнопки */
 .port-btn-list {
   list-style: none;
+  display: inline-flex;
+  margin-top: 102px;
+  margin-bottom: 33.8px;
 }
 .port-btn {
   height: 38px;
@@ -191,6 +290,7 @@ body {
   text-align: center;
   color: var(--title-text-color);
   cursor: pointer;
+  ma
 }
 .port-btn:hover,
 .port-btn:focus {
@@ -208,9 +308,14 @@ body {
 /* Список изображений */
 .port-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .port-list a {
   text-decoration: none;
+}
+.port-list-img {
+  margin-bottom: 19.88px;
 }
 .port-title {
   font-weight: 700;
@@ -218,9 +323,23 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
+  margin-top: 0;
+  margin-bottom: 3.98px;
 }
 .port-text {
   font-size: 16px;
   line-height: 1.87;
   color: var(--context-color);
+  margin-bottom: 49.71px;
+  margin-top: 0;
 }
+/* kostili */
+.port-text-last {
+  font-size: 16px;
+  line-height: 1.87;
+  color: var(--context-color);
+  margin-bottom: 49.71px;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+/* kostili */
