--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,19 @@ body {
   color: var(--context-color);
   margin: 0;
 }
-/* Щапка сайта */
-.top {
-  display: inline-block;
+.conteiner {
   width: 1200px;
-  height: 80px;
+  margin-left: auto;
+  margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+.section {
+  padding-bottom: 94px;
+}
+/* Щапка сайта */
+.top {
+  border-bottom: 1px solid #ececec;
 }
 /* Логотип */
 .logo {
@@ -91,9 +97,9 @@ body {
 .hero {
   background: var(--hero-color);
   width: 1600px;
-  height: 600px;
   text-align: center;
-  margin-bottom: 94px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero h1 {
   margin-top: 0;
@@ -122,11 +128,8 @@ body {
   color: var(--white-next-color);
 }
 /* Секция достоинства */
-.dig-main {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-bottom: 94px;
+.dignity {
+  padding-top: 94px;
 }
 .dignity > h2 {
   display: none;
@@ -152,12 +155,6 @@ body {
   padding: 0;
 }
 /* Секция Чем мы занимаемся */
-.about-work {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-bottom: 94px;
-}
 .about-work ul {
   margin: 0;
   padding: 0;
@@ -174,13 +171,6 @@ body {
   margin: 0 0 50px 0;
 }
 /* Секция Наша команда */
-.team {
-  background-color: var(--team-bg-color);
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 94px;
-}
 .team ul {
   margin: 0;
   padding: 0;
@@ -214,10 +204,11 @@ body {
 }
 /* Подвал */
 .ftr {
-  display: inline-block;
   background-color: var(--hero-color);
   width: 1600px;
   height: 252px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .ftr-cont {
   width: 1200px;
@@ -266,21 +257,25 @@ body {
   display: none;
 }
 .port-our-work {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 94px;
+  margin-top: 102px;
 }
-/* Кнопки */
+/* Кнопки  !!!!*/
 .port-btn-list {
   list-style: none;
-  display: inline-flex;
-  margin-top: 102px;
+  display: flex;
+  justify-content: center;
+  padding-top: 0;
   margin-bottom: 33.8px;
+  /* !!!!! in work */
 }
+.port-btn-list > .item:not(:last-child) {
+  margin-right: 8.12px;
+}
+
 .port-btn {
   height: 38px;
   background: var(--team-bg-color);
+  border: none;
   border-radius: 4px;
   font-family: inherit;
   font-style: normal;
@@ -290,7 +285,6 @@ body {
   text-align: center;
   color: var(--title-text-color);
   cursor: pointer;
-  ma
 }
 .port-btn:hover,
 .port-btn:focus {
@@ -310,6 +304,14 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -29.82px;
+}
+.port-item {
+  margin-left: 30px;
+  margin-top: 29.82px;
 }
 .port-list a {
   text-decoration: none;
