--- a/css/styles.css
+++ b/css/styles.css
@@ -125,8 +125,8 @@ body {
 /* Секция герой */
 .hero {
   background: var(--hero-color);
-  width: 1600px;
-  height: 600px;
+  /* height: 600px; */
+  padding-bottom: 200px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -167,17 +167,19 @@ body {
   display: none;
 }
 .dignity-list {
-  display: flex;
-  margin: 0;
   padding: 0;
-  margin-left: -30px;
+  display: flex;
+  flex-wrap: wrap;
+/* легкий способ растянуть элементы */
+  justify-content: space-between; */
 }
+/* Отображение ширины в % от родителя  (100% - сумма маржинов в строке -1(крайний)) / на количество элементов в строке*/
 .dignity-item {
-  margin-left: 30px;
-  margin-bottom: 0;
-}
-.dignity li {
+  width: calc((100% - 90px) /4);
   list-style-type: none;
+}
+.dignity-item:not(:last-child) {
+margin-right: 30px;
 }
 .dignity-title {
   font-weight: 700;
@@ -197,11 +199,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-}
-.a-w-item {
-  margin-left: 30px;
+  justify-content: space-between;
 }
 .about-work li {
   list-style-type: none;
@@ -212,7 +210,8 @@ body {
   line-height: 1.16;
   text-align: center;
   color: var(--title-text-color);
-  margin: 0 0 50px 0;
+  margin: 0 0 0 0;
+  padding-bottom: 50px;
 }
 /* Секция Наша команда */
 .team {
@@ -222,13 +221,17 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
+  /* flex-wrap: wrap; */
+  /* margin-left: -30px; */
 }
 .team-item {
   list-style-type: none;
-  margin-left: 30px;
+  width: 270px;
+  /* margin-left: 30px; */
   margin-bottom: 0;
+}
+.team-item + .team-item {
+  margin-left: 30px;
 }
 .team-title {
   font-weight: 500;
@@ -248,15 +251,12 @@ body {
 /* Подвал */
 .ftr {
   background-color: var(--hero-color);
-  width: 1600px;
   height: 252px;
   margin-left: auto;
   margin-right: auto;
 }
 .ftr-cont {
-  width: 1200px;
-  padding-left: 215px;
-  padding-right: 15px;
+  padding-bottom: 60px;
 }
 .ftr-cont ul {
   margin: 0;
@@ -300,21 +300,22 @@ body {
   display: none;
 }
 .port-our-work {
-  margin-top: 102px;
+  
 }
 /* Кнопки  !!!!*/
 .port-btn-list {
   list-style: none;
   display: flex;
   justify-content: center;
-  padding-top: 0;
-  margin-bottom: 33.8px;
-  /* !!!!! in work */
+  padding-top: 102px;
+  padding-bottom: 33px;
+  padding-left: 0;
+  padding-right: 0;
+  margin: 0;
 }
 .port-btn-list > .item:not(:last-child) {
   margin-right: 8.12px;
 }
-
 .port-btn {
   height: 38px;
   background: var(--team-bg-color);
@@ -345,16 +346,30 @@ body {
 /* Список изображений */
 .port-list {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -29.82px;
 }
 .port-item {
-  margin-left: 30px;
-  margin-top: 29.82px;
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border: 1px solid #eeeeee;
+}
+/* Даем каждому третьему элементу в списке нулевой правый и верхний маржин!!! */
+  .port-item:nth-child(3n) {
+    margin-right: 0;
+}
+/* первым трем */
+/* .port-item:nth-child(-n+3) {
+  margin-top: 0; */
+  /* нижней строке обнуляем нижние маржины */
+/* .port-item:nth-last-child(-n+3) {
+  margin-bottom: 0;*/
+.port-item:nth-last-child(-n+3) {
+  margin-bottom: 0;
 }
 .port-list a {
   text-decoration: none;
@@ -375,16 +390,7 @@ body {
   font-size: 16px;
   line-height: 1.87;
   color: var(--context-color);
-  margin-bottom: 49.71px;
+  padding-bottom: 20px;
   margin-top: 0;
-}
-/* kostili */
-.port-text-last {
-  font-size: 16px;
-  line-height: 1.87;
-  color: var(--context-color);
-  margin-bottom: 49.71px;
   margin-bottom: 0;
-  margin-top: 0;
 }
-/* kostili */
