--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,22 @@ body {
 }
 .section {
   padding-bottom: 94px;
+  padding-top: 94px;
 }
-/* Щапка сайта */
+h1 h2 h3 p {
+  margin: 0 auto;
+}
+ul {
+  padding: 0;
+  margin: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* Щапка сaйта */
 .top {
   border-bottom: 1px solid #ececec;
   display: flex;
@@ -126,12 +140,15 @@ body {
 .hero {
   background: var(--hero-color);
   /* height: 600px; */
+  padding-top: 0;
   padding-bottom: 200px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
 .hero h1 {
+  width: 696px;
+  margin: 0 auto;
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 900;
@@ -160,11 +177,12 @@ body {
   color: var(--white-next-color);
 }
 /* Секция достоинства */
-.dignity {
-  padding-top: 94px;
-}
-.dignity > h2 {
+
+.hide {
   display: none;
+}
+.dignity {
+  padding-bottom: 0;
 }
 .dignity-list {
   padding: 0;
@@ -195,9 +213,7 @@ margin-right: 30px;
   padding: 0;
 }
 /* Секция Чем мы занимаемся */
-.abou-w-list {
-  margin: 0;
-  padding: 0;
+.abou-w-list { 
   display: flex;
   justify-content: space-between;
 }
@@ -210,16 +226,18 @@ margin-right: 30px;
   line-height: 1.16;
   text-align: center;
   color: var(--title-text-color);
-  margin: 0 0 0 0;
-  padding-bottom: 50px;
+  margin-top: 0;
+  margin-bottom: 50px;
 }
 /* Секция Наша команда */
 .team {
+  padding-top: 0;
   background-color: var(--team-bg-color);
 }
+
 .team-list {
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   display: flex;
   /* flex-wrap: wrap; */
   /* margin-left: -30px; */
@@ -238,30 +256,35 @@ margin-right: 30px;
   font-size: 16px;
   line-height: 1.18;
   color: var(--title-text-color);
-  margin-top: 30px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 .team-text {
   font-size: 16px;
   line-height: 1.18;
   margin-top: 0;
   margin-bottom: 0;
-  padding: 0;
+  padding-bottom: 30px;
+}
+.our-team {
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
 }
 
 /* Подвал */
 .ftr {
   background-color: var(--hero-color);
-  height: 252px;
+  /* height: 252px; */
   margin-left: auto;
   margin-right: auto;
+  padding-top: 60px;
 }
-.ftr-cont {
-  padding-bottom: 60px;
-}
-.ftr-cont ul {
-  margin: 0;
-  padding: 0;
-}
+
 .ftr-list a:hover,
 .ftr-list a:focus {
   color: var(--logo-color);
@@ -271,6 +294,10 @@ margin-right: 30px;
 }
 .ftr-list {
   list-style: none;
+  padding-bottom: 60px;
+}
+.ftr-sc:not(:last-child) {
+  margin-bottom: 9px;
 }
 .ftr-list a {
   text-decoration: none;
@@ -281,7 +308,6 @@ margin-right: 30px;
   font-size: 26px;
   line-height: 1.19;
   color: var(--white-next-color);
-  padding-top: 60px;
   margin-bottom: 20px;
 }
 .ftr-street,
@@ -289,26 +315,38 @@ margin-right: 30px;
   font-style: normal;
   line-height: 1.71;
   color: var(--white-next-color);
-  margin-bottom: 9px;
+  /* margin-bottom: 9px; */
 }
 .ftr-contacts {
   color: var(--ftr-contacts-color);
 }
-/* Portfolio html */
-
-.port-our-work > h1 {
-  display: none;
+.ftr-sc {
+  margin-top: 9px;
+  margin-bottom: 9px;
 }
+/* .ftr-street {
+  margin-top: 0;
+  margin-bottom: 90px; */
+}
+/* .ftr-contacts {
+  margin-top: 0;
+  margin-bottom: 90px;
+} */
+
+
+/* Portfolio html */
 .port-our-work {
-  
+  padding-top: 0;
+}
+.hide {
+  display: none;
 }
 /* Кнопки  !!!!*/
 .port-btn-list {
   list-style: none;
   display: flex;
   justify-content: center;
-  padding-top: 102px;
-  padding-bottom: 33px;
+  /* padding-top: 102px; */
   padding-left: 0;
   padding-right: 0;
   margin: 0;
@@ -329,6 +367,7 @@ margin-right: 30px;
   text-align: center;
   color: var(--title-text-color);
   cursor: pointer;
+  padding: 6px 22px;
 }
 .port-btn:hover,
 .port-btn:focus {
@@ -346,7 +385,7 @@ margin-right: 30px;
 /* Список изображений */
 .port-list {
   list-style: none;
-  margin-top: 0;
+  margin-top: 50px;
   margin-bottom: 0;
   padding-left: 0;
   display: flex;
@@ -356,7 +395,14 @@ margin-right: 30px;
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  border: 1px solid #eeeeee;
+  /* border: 1px solid #eeeeee; */
+}
+.port-bord {
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 /* Даем каждому третьему элементу в списке нулевой правый и верхний маржин!!! */
   .port-item:nth-child(3n) {
@@ -375,7 +421,7 @@ margin-right: 30px;
   text-decoration: none;
 }
 .port-list-img {
-  margin-bottom: 19.88px;
+  margin-bottom: 0px;
 }
 .port-title {
   font-weight: 700;
@@ -390,7 +436,6 @@ margin-right: 30px;
   font-size: 16px;
   line-height: 1.87;
   color: var(--context-color);
-  padding-bottom: 20px;
   margin-top: 0;
   margin-bottom: 0;
 }
